examples/errors/condition_type_branch.aaa
fn main {
    if 3 true {
        nop
    }
    drop
}
